tests/neg/semantic_undefined_var.baa
// EXPECT: [Semantic Error]
// EXPECT: Undefined variable
صحيح الرئيسية() {
    س = 1.
    إرجع 0.
}
